test/types/range/elliot/badRangeLiterals/badLowBoundedRange.good
badLowBoundedRange.chpl:2: error: Bound of 'low..' must be an integer
