test/types/range/elliot/badRangeLiterals/badLowBoundedRange.chpl
// test error message for an illegal low bounded range
var badLowBounded = 0.0..;
